# fastapi-view

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: publish.yaml  test_pypi.yaml
example/: main.py  package.json  schemas.py  vite.config.ts
example/assets/js/: app.js
example/assets/js/Pages/: Item.vue
example/views/: app.html
examples/inertia/: .env.example  bun.lockb  main.py  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
examples/inertia/app/: config.py  data.py  depends.py  main.py  schemas.py  security.py
examples/inertia/app/auth/: schemas.py  services.py  view.py
examples/inertia/app/home/: view.py
examples/inertia/app/product/: services.py  view.py
examples/inertia/app/routers/view/: auth.py  contacts.py  dashboard.py  home.py  merge_demo.py  organizations.py  product.py  users.py
examples/inertia/app/schemas/: auth.py  common.py  contact.py  organization.py  product.py  user.py
examples/inertia/app/services/: auth.py  product.py
examples/inertia/resources/assets/css/: app.css
examples/inertia/resources/assets/js/: app.js  app.ts  utils.ts
examples/inertia/resources/assets/js/Components/: Navbar.vue
examples/inertia/resources/assets/js/Layouts/: AppLayout.vue
examples/inertia/resources/assets/js/Pages/: About.vue  Home.vue  Index.vue  Item.vue
examples/inertia/resources/assets/js/Pages/Auth/: Login.vue
examples/inertia/resources/assets/js/Pages/Contacts/: Create.vue  Edit.vue  Index.vue
examples/inertia/resources/assets/js/Pages/Dashboard/: Index.vue
examples/inertia/resources/assets/js/Pages/MergeDemo/: Index.vue
examples/inertia/resources/assets/js/Pages/Organizations/: Create.vue  Edit.vue  Index.vue
examples/inertia/resources/assets/js/Pages/Products/: Detail.vue  Index.vue
examples/inertia/resources/assets/js/Pages/Users/: Create.vue  Edit.vue  Index.vue
examples/inertia/resources/assets/js/Shared/: Layout.vue  LoadingButton.vue  SearchFilter.vue  SelectInput.vue  TextInput.vue  Toast.vue
examples/inertia/resources/views/: app.html  index.html
examples/inertia/src/: main.py  schemas.py
fastapi_view/: __init__.py  config.py  enums.py  inertia.py  loaders.py  middleware.py  view.py  vite.py
fastapi_view/inertia/: __init__.py  config.py  enums.py  inertia.py  props.py  vite.py
fastapi_view/middlewares/: inertia_request.py  view_request.py
fastapi_view/vite/: config.py  extension.py
tests/: conftest.py  test_fastapi_view.py  test_inertia.py  test_view.py  test_vite.py
tests/integration/: test_inertia.py  test_inertia_merge_props.py  test_view.py
tests/resources/inertia/: app.html
tests/resources/views/: app.html  inertia.html  vite.html
tests/templates/: about.html  index.html
tests/unit/: test_inertia.py  test_inertia_merge_props.py  test_view.py  test_vite.py  test_vite_config.py  test_vite_extension.py
