[tool.poetry]
name = "fastapi-view"
version = "0.4.0"
description = "A jinja2 view template helping function for FastAPI."
authors = ["Sam Yao <turisesonia@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/turisesonia/fastapi-view.git"
repository = "https://github.com/turisesonia/fastapi-view.git"
keywords = ["Fastapi", "template", "view", "jinja2"]
classifiers = []
# include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.70.0"
Jinja2 = "^3.0.0"
pydantic-settings = "^2.5.2"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
fastapi = {extras = ["standard"], version = "^0.115.0"}
requests = "^2.27.1"
httpx = "^0.25.1"
pyquery = "^2.0.0"
faker = "^28.0.0"
pytest-mock = "^3.14.0"
uvicorn = "^0.30.6"
poethepoet = "^0.29.0"

[tool.poe.tasks]
dev = "uvicorn example.main:app --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests", "integration"]
filterwarnings = ["ignore::DeprecationWarning"]


[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py310"
ignore = ["UP032"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-line-length = 300
