[project]
name = "fastapi-inertia-example"
version = "0.1.0"
description = "Example application demonstrating FastAPI with Inertia.js"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.6",
    "itsdangerous>=2.2.0",
    "fastapi-view",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.3", "httpx>=0.25.1", "requests>=2.27.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = ["pytest>=7.4.3", "httpx>=0.25.1", "requests>=2.27.1"]

[tool.uv.sources]
fastapi-view = { path = "../..", editable = true }

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
